--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       "~navigation/*": ["./src/navigation/*"],
       "~state/*": ["./src/state/*"],
       "~styles/*": ["./src/styles/*"],
+      "~store/*": ["./src/store/*"],
+      "~models/*": ["./src/models/*"],
+      "~constants/*": ["./src/constants/*"],
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
