--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.3",
+    "@react-native-firebase/app": "^14.5.1",
+    "@react-native-firebase/auth": "^14.5.1",
+    "@react-native-google-signin/google-signin": "^7.2.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
